minikube/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: django
          image: stmkv03/django:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '500Mi'
              cpu: '200m'
