minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: 'true'
spec:
  rules:
    - host: demo.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: django-clusterip
                port:
                  number: 80
